--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <title>Trenér plavání Praha, Brno, Ostrava, Olomouc a Online | ES</title>
-    <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online"
+    <title>Trenér plavání Praha, Brno, Ostrava a Online | ES</title>
+    <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava nebo Online"
           name="description">
 
     <meta property="og:locale" content="cs_CZ">
-    <meta property="og:title" content="Trenér plavání Praha, Brno, Ostrava, Olomouc a Online">
+    <meta property="og:title" content="Trenér plavání Praha, Brno, Ostrava a Online">
     <meta property="og:description"
-          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online">
+          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava nebo Online">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elementswimming.cz/">
     <meta property="og:site_name" content="Element swimming">
@@ -23,7 +23,7 @@
     <meta name="twitter:site" content="@elementswimming">
     <meta name="twitter:title" content="Element swimming">
     <meta name="twitter:description"
-          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online">
+          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava nebo Online">
     <meta name="twitter:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
 
     <link rel="icon" href="static/images/logo_icon.png">
@@ -96,7 +96,7 @@
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
         <div class="col-lg-5 p-3 p-lg-5 pt-lg-3 justify-content-center">
             <p class="pre-title fw-bold">Do bazénu? Jedině s námi!</p>
-            <h1 class="pre-title fw-bold" style="display:none">Trenér plavání Praha, Brno, Ostrava, Olomouc a Online</h1>
+            <h1 class="pre-title fw-bold" style="display:none">Trenér plavání Praha, Brno, Ostrava a Online</h1>
             <p class="display-4 fw-bold lh-1 py-3">Plavecký trénink 21. století</p>
             <p class="lead">Moderní pojetí tréninkového procesu, podložené aktuálními trendy a pod dohledem vysokoškolsky vzdělaných profesionálu v daném
                 oboru</p>
@@ -185,16 +185,16 @@
             Individuální lekce probíhají s certifikovanými trenéry <i>ČSPS (Český svaz plaveckých sportů)</i>. Každý náš trenér absolvoval dlouhodobou plaveckou
             přípravu. Právě díky ní, může své poznatky předávat dál naším klientům.
             To dělá z trenérů Element swimming špičky ve svém oboru. Jsme organizace, která Vám jako jedna z mála nabízí plavecké služby napříč celou
-            republikou. A to konkrétně v <span class="fw-bold">Praze, Brně, Ostravě</span> a <span class="fw-bold">Olomouci</span>.
+            republikou. A to konkrétně v <span class="fw-bold">Praze, Brně</span> a <span class="fw-bold">Ostravě</span>.
             Z našich služeb můžete rovněž využít i tzv. <span class="fw-bold">Online coaching</span>.
         </p>
     </div>
 
-    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+    <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5">
         <div class="col">
             <button id="prague" type="button" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#PragueModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/prague.webp');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                    <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-white text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold no-decoration text-start">Praha</h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
@@ -208,7 +208,7 @@
         <div class="col">
             <button id="brno" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#BrnoModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/brno.webp');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                    <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-white text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Brno</h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
@@ -222,22 +222,8 @@
         <div class="col">
             <button id="ostrava" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OstravaModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/ostrava.jpg');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                    <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Ostrava</h2>
-                        <ul class="d-flex list-unstyled mt-auto">
-                            <li class="me-auto">
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </button>
-        </div>
-
-        <div class="col">
-            <button id="olomouc" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OlomoucModal">
-                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/olomouc.webp');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Olomouc</h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
                             </li>
@@ -250,7 +236,7 @@
         <div class="col">
             <button id="online" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OnlineModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/online.webp');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                    <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Online</h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
@@ -264,7 +250,8 @@
 </div>
 
 <!-- Services footer -->
-<div class="container col-xxl-10 px-4 py-3 border-bottom">
+<div class="container col-xxl-10 px-4 py-5 border-bottom">
+    <p class="display-5 py-3 fw-bold text-center">Proč zvolit právě nás?</p>
     <div class="row g-4 py-3 row-cols-1 row-cols-lg-3">
         <div class="feature col">
             <h2 class="text-muted py-3">Moderní přístup</h2>
@@ -280,6 +267,28 @@
         </div>
     </div>
 </div>
+<!-- References footer -->
+<div class="container col-xxl-10 px-4 py-5 border-bottom">
+    <p class="display-5 py-3 fw-bold text-center">Reference</p>
+    <div class="row g-4 py-3 row-cols-1 row-cols-lg-3">
+        <div class="feature col">
+            <h2 class="text-muted py-3">Petr M. - Brno</h2>
+            <p class="text-justify font-italic">"Dobrý deň, chcel by som uplatniť voucher na 3 lekcie, už som si jeden voucher
+                kupoval a páčilo sa mi, s trénerom Honzom v Brně si dohodnem detaily lekcií."</p>
+        </div>
+        <div class="feature col">
+            <h2 class="text-muted py-3">Barbora K. - Praha</h2>
+            <p class="text-justify font-italic">"Moc děkuju za tréninky, jsou super a moc mě to baví! Vždycky hezky zvednou
+                náladu a těším se zas na další, děkuju!"</p>
+        </div>
+        <div class="feature col">
+            <h2 class="text-muted py-3">Kira K. - Ostrava</h2>
+            <p class="text-justify font-italic">"Dobrý den, Tréninky byly výborné, naučila jsem se plavat 3 styly, moc
+                děkuji za poskytnutí služeb, jsem vděčná za novou zkušenost :)"</p>
+        </div>
+    </div>
+</div>
+
 <!-- Contact -->
 <div id="contact" class="container col-xxl-10 px-4 py-4">
     <div class="row flex-lg-row align-items-center g-5 justify-content-center">
@@ -694,115 +703,6 @@
     </div>
 </div>
 
-<div class="modal fade" id="OlomoucModal" tabindex="-1" aria-labelledby="OlomoucModal" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-        <div class="modal-content px-2">
-            <div class="modal-header text-center">
-                <h2 class="modal-title text-muted wh-100">Trenér plavání Olomouc - ceník a služby</h2>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="row row-cols-1 align-items-stretch pb-3">
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individuální lekce</p>
-                                    <p class="mb-3 display-cust lh-1 fw-bold">599 Kč/hod</p>
-                                </div>
-                                <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3">
-                                        <small>
-                                            Nebaví tě “kroužit odezdi ke zdi”? Nabízíme Ti smysluplný trénink tak,
-                                            že jsi pod drobnohledem profesionála a víš, že jsi na tréninku, který je
-                                            nastaven tak, aby vedl ke zlepšení tvých cílů.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-4 display-6 lh-1 fw-bold">Lekce pro dvojice</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">699 Kč/hod</p>
-                                </div>
-                                <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3">
-                                        <small>
-                                            Nerad chodíš sportovat sám? Raději jdeš s přítelkyní, kolegou z práce,
-                                            bráchou, ségrou a nebo babičkou? Tak v tom případě neváhej, vem toho, s kým
-                                            normálně chodíš a plav.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-4 display-6 lh-1 fw-bold">Skupinové lekce</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">749 Kč/hod</p>
-                                </div>
-                                <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3">
-                                        <small>
-                                            Lekce, kdy se sejdou ti, kteří výkonnostně zapadají k sobě a
-                                            nebo právě ti, kteří chodí plavat jako parta.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Lekce pro (ne)plavce</p>
-                                    <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hod</p>
-                                </div>
-                                <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3">
-                                        <small>
-                                            Pokud se máš v plánu naučit plavat v pozdějším věku a nebo chceš někoho,
-                                            kdo se bude tvým dětem věnovat víc, než trenér co má v kroužku 20 dětí, tak napiš.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-green rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-4 display-6 lh-1 fw-bold">Rozbor techniky</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">1999 Kč</p>
-                                </div>
-                                <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3 text-justify long-text">
-                                        <small>
-                                            Techniku videí z Youtube máš zmáklou ale ve vodě to stále není ono?
-                                            Myslíš si, že pohyby ve vodě opakuješ jak ve videu ale očekávaný progress nikde?
-                                            Tak tady pro tebe něco mám -  Videoanalýza plaveckého způsobu s následnou korekcí techniky.
-                                            Při využití této služby ti poskytnu video záznam tvého plavání,
-                                            který společně projdeme jak teoreticky, tak prakticky.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 <div class="modal fade" id="OnlineModal" tabindex="-1" aria-labelledby="OnlineModal" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -903,7 +803,6 @@
     Prague - Photo by JESHOOTS.com from Pexels
     Brno - https://pixabay.com/images/id-4902615/
     Ostrava - Adam Popelka (https://www.facebook.com/lovecokamziku/)
-    Olomouc - https://pixabay.com/images/id-4229272/
     Online - Photo by Pixabay from Pexels
   
   Contact icons:
