Change home photo

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             </div>
         </div>
         <div class="col-lg-7 p-0">
-            <img src="static/images/home_photo.webp" class="img-fluid rounded-3 mb-4 section-image" title="Dominik Vavrečka a tým Victoria Praha"
-                 alt="Tomáš Ludvík, Sebastian Luňák, Dominik Vavrečka, Tomáš Franta, Ondřej Smrček - Victoria Praha" loading="lazy">
+            <img src="static/images/home_photo.webp" class="img-fluid rounded-3 mb-4 section-image" title="Úvodní foto"
+                 alt="Úvodní foto" loading="lazy">
         </div>
     </div>
 </div>
@@ -263,28 +263,7 @@
         </div>
         <div class="feature col">
             <h2 class="text-muted py-3">Flexibilita a nezávislost</h2>
-            <p>Působíme ve čtyřech městech v ČR a proto není takřka problém vyhovět vaším individuálním požadavkům </p>
-        </div>
-    </div>
-</div>
-<!-- References footer -->
-<div class="container col-xxl-10 px-4 py-5 border-bottom">
-    <p class="display-5 py-3 fw-bold text-center">Reference</p>
-    <div class="row g-4 py-3 row-cols-1 row-cols-lg-3">
-        <div class="feature col">
-            <h2 class="text-muted py-3">Petr M. - Brno</h2>
-            <p class="text-justify font-italic">"Dobrý deň, chcel by som uplatniť voucher na 3 lekcie, už som si jeden voucher
-                kupoval a páčilo sa mi, s trénerom Honzom v Brně si dohodnem detaily lekcií."</p>
-        </div>
-        <div class="feature col">
-            <h2 class="text-muted py-3">Barbora K. - Praha</h2>
-            <p class="text-justify font-italic">"Moc děkuju za tréninky, jsou super a moc mě to baví! Vždycky hezky zvednou
-                náladu a těším se zas na další, děkuju!"</p>
-        </div>
-        <div class="feature col">
-            <h2 class="text-muted py-3">Kira K. - Ostrava</h2>
-            <p class="text-justify font-italic">"Dobrý den, Tréninky byly výborné, naučila jsem se plavat 3 styly, moc
-                děkuji za poskytnutí služeb, jsem vděčná za novou zkušenost :)"</p>
+            <p>Působíme ve třech městech v ČR a proto není takřka problém vyhovět vaším individuálním požadavkům</p>
         </div>
     </div>
 </div>
@@ -341,7 +320,6 @@
                     <p class="m-0 px-3">LinkedIn</p>
                 </a></div>
             </div>
-            </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
             </div>
         </div>
@@ -792,6 +770,7 @@
 
 <!-- Credits 
   https://getbootstrap.com/
+  Home photo - Photo by Kindel Media from Pexels: https://www.pexels.com/photo/photo-of-an-athlete-swimming-underwater-8688566/
 
   Navbar links hover effect: 
     https://codepen.io/martinwolf/pen/eNNdme
