Add additional form description

--- a/index.html
+++ b/index.html
@@ -349,10 +349,14 @@
          <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content px-2">
                <div class="modal-header text-center">
-                  <h2 class="modal-title text-muted wh-100">Kontaktní formulář</h2>
+                  <h2 class="modal-title text-muted wh-100">Rezervační formulář</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                </div>
-               <div class="modal-body">
+               <div class="modal-body py-4">
+                  <p class="text-muted">
+                     Chcete si rezervovat trénink, maté nějakou otázku? Neváhejte nás kontaktovat přes
+                     přiložený formulář a naši trenéři již s Vámi vše důležité vyřídí.
+                  </p>
                   <form>
                      <div class="row justify-content-center g-4 py-4">
                         <div class="col-12">
@@ -402,7 +406,11 @@
                         <div class="col-12">
                            <label for="message">Zpráva</label>
                            <div class="input-group">
-                              <textarea class="form-control" aria-label="With textarea" id="message" required></textarea>
+                              <textarea class="form-control"
+                                        aria-label="With textarea"
+                                        id="message"
+                                        placeholder="Budeme rádi pokud se s námi pochlubíte o Vaše dosavadní plavecké zkušenosti, nebo nám sdělíte požadavky na trénéra, či  dny, které Vám pro trénink nejvíce vyhovují."
+                                        required></textarea>
                            </div>
                         </div>
                         <div class="col-12 d-flex justify-content-center">
