--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                               <textarea class="form-control"
                                         aria-label="With textarea"
                                         id="message"
-                                        placeholder="Budeme rádi pokud se s námi pochlubíte o Vaše dosavadní plavecké zkušenosti, nebo nám sdělíte požadavky na trénéra, či  dny, které Vám pro trénink nejvíce vyhovují."
+                                        placeholder="Budeme rádi pokud se s námi pochlubíte o Vaše dosavadní plavecké zkušenosti, nebo nám sdělíte požadavky na trénéra, čas či dny, které Vám pro trénink nejvíce vyhovují."
                                         required></textarea>
                            </div>
                         </div>
